// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListReplies filters 1`] = `
Object {
  "data": Object {
    "ListReplies": Object {
      "edges": Array [
        Object {
          "node": Object {
            "id": "moreLikeThis2",
          },
        },
        Object {
          "node": Object {
            "id": "moreLikeThis1",
          },
        },
      ],
      "pageInfo": Object {
        "firstCursor": "WyJkb2MjbW9yZUxpa2VUaGlzMiJd",
        "lastCursor": "WyJkb2MjbW9yZUxpa2VUaGlzMSJd",
      },
      "totalCount": 2,
    },
  },
}
`;

exports[`ListReplies filters 2`] = `
Object {
  "data": Object {
    "ListReplies": Object {
      "edges": Array [
        Object {
          "node": Object {
            "id": "userFoo",
          },
        },
      ],
      "pageInfo": Object {
        "firstCursor": "WyJkb2MjdXNlckZvbyJd",
        "lastCursor": "WyJkb2MjdXNlckZvbyJd",
      },
      "totalCount": 1,
    },
  },
}
`;

exports[`ListReplies filters 3`] = `
Object {
  "data": Object {
    "ListReplies": Object {
      "edges": Array [
        Object {
          "node": Object {
            "id": "rumor",
          },
        },
      ],
      "pageInfo": Object {
        "firstCursor": "WyJkb2MjcnVtb3IiXQ==",
        "lastCursor": "WyJkb2MjcnVtb3IiXQ==",
      },
      "totalCount": 1,
    },
  },
}
`;

exports[`ListReplies handles selfOnly filter properly if not logged in 1`] = `
Object {
  "data": Object {
    "ListReplies": null,
  },
  "errors": Array [
    [GraphQLError: selfOnly can be set only after log in],
  ],
}
`;

exports[`ListReplies lists all replies 1`] = `
Object {
  "data": Object {
    "ListReplies": Object {
      "edges": Array [
        Object {
          "cursor": "WyJkb2MjdXNlckZvbyJd",
          "node": Object {
            "id": "userFoo",
          },
        },
        Object {
          "cursor": "WyJkb2MjcnVtb3IiXQ==",
          "node": Object {
            "id": "rumor",
          },
        },
        Object {
          "cursor": "WyJkb2MjbW9yZUxpa2VUaGlzMiJd",
          "node": Object {
            "id": "moreLikeThis2",
          },
        },
        Object {
          "cursor": "WyJkb2MjbW9yZUxpa2VUaGlzMSJd",
          "node": Object {
            "id": "moreLikeThis1",
          },
        },
      ],
      "pageInfo": Object {
        "firstCursor": "WyJkb2MjdXNlckZvbyJd",
        "lastCursor": "WyJkb2MjbW9yZUxpa2VUaGlzMSJd",
      },
      "totalCount": 4,
    },
  },
}
`;

exports[`ListReplies sorts 1`] = `
Object {
  "data": Object {
    "ListReplies": Object {
      "edges": Array [
        Object {
          "node": Object {
            "id": "userFoo",
          },
        },
        Object {
          "node": Object {
            "id": "moreLikeThis1",
          },
        },
        Object {
          "node": Object {
            "id": "moreLikeThis2",
          },
        },
        Object {
          "node": Object {
            "id": "rumor",
          },
        },
      ],
      "pageInfo": Object {
        "firstCursor": "WzQsImRvYyN1c2VyRm9vIl0=",
        "lastCursor": "WzEsImRvYyNydW1vciJd",
      },
      "totalCount": 4,
    },
  },
}
`;

exports[`ListReplies supports after 1`] = `
Object {
  "data": Object {
    "ListReplies": Object {
      "edges": Array [
        Object {
          "node": Object {
            "id": "moreLikeThis1",
          },
        },
      ],
      "pageInfo": Object {
        "firstCursor": "WyJkb2MjdXNlckZvbyJd",
        "lastCursor": "WyJkb2MjbW9yZUxpa2VUaGlzMSJd",
      },
      "totalCount": 4,
    },
  },
}
`;

exports[`ListReplies supports before 1`] = `
Object {
  "data": Object {
    "ListReplies": Object {
      "edges": Array [
        Object {
          "node": Object {
            "id": "userFoo",
          },
        },
        Object {
          "node": Object {
            "id": "rumor",
          },
        },
        Object {
          "node": Object {
            "id": "moreLikeThis2",
          },
        },
      ],
      "pageInfo": Object {
        "firstCursor": "WyJkb2MjdXNlckZvbyJd",
        "lastCursor": "WyJkb2MjbW9yZUxpa2VUaGlzMSJd",
      },
      "totalCount": 4,
    },
  },
}
`;
